Closed Bug 178350 Opened 22 years ago Closed 22 years ago

urichecker crashes things

Categories

(Core :: Networking, defect)

x86
Windows 2000
defect
Not set
critical

Tracking

()

RESOLVED FIXED

People

(Reporter: timeless, Assigned: timeless)

Details

(Keywords: crash)

Attachments

(1 file, 1 obsolete file)

found while working on bug 155524
entering this into xpcshell (11/04-08):
Components.classes["@mozilla.org/network/urichecker;1"].createInstance(Components.interfaces.nsIURIChecker).baseRequest
crashes.
fwiw. there's a 
###!!! ASSERTION: null parameter: 'aSource', file
../../../dist/include/xpcom/nsISupportsUtils.h, line 262

nsURIChecker::GetBaseRequest
[c:/builds/seamonkey/mozilla/netwerk/base/src/nsURIChecker.cpp, line 148]
XPTC_InvokeByIndex
[c:/builds/seamonkey/mozilla/xpcom/reflect/xptcall/src/md/win32/xptcinvoke.cpp,
line 106]

145               nsURIChecker::GetBaseRequest(nsIRequest** aRequest)
146               {
147                   return CallQueryInterface(mChannel, aRequest);
148               }
the fix is simple :)
Assignee: new-network-bugs → timeless
Keywords: crash
Status: NEW → ASSIGNED
Attached patch checks (obsolete) — Splinter Review
> nsURIChecker::GetBaseRequest(nsIRequest** aRequest)

Null the out param out too?  sr=bzbarsky with that.
Attachment #105138 - Attachment is obsolete: true
Comment on attachment 105213 [details] [diff] [review]
checks + null outs

r=cmanske
Attachment #105213 - Flags: review+
fixed
Status: ASSIGNED → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
timeless: any chance you can put in some xpc shell output that shows this as fixed?
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: