Bug 178350 urichecker crashes things r=cmanske sr=bz